# libnftnl-ct

./: .gitignore  Make_global.am  Makefile.am  configure.ac  doxygen.cfg.in  libnftnl.pc.in
examples/: Makefile.am  chain.xml  nft-chain-add.c  nft-chain-del.c  nft-chain-get.c  nft-chain-json-add.c  nft-chain-parse-add.c  nft-chain-xml-add.c  nft-compat-get.c  nft-ct-helper-get.c  nft-ct-timeout-add.c  nft-ct-timeout-get.c  nft-events.c  nft-flowtable-add.c  nft-flowtable-del.c  nft-flowtable-get.c  nft-map-add.c  nft-obj-add.c  nft-obj-del.c  nft-obj-get.c  nft-rule-add.c  nft-rule-ct-expectation-add.c  nft-rule-ct-helper-add.c  nft-rule-ct-timeout-add.c  nft-rule-del.c  nft-rule-get.c  nft-rule-insert.c  nft-rule-json-add.c  nft-rule-parse-add.c  nft-rule-xml-add.c  nft-ruleset-get.c  nft-ruleset-parse-file.c  nft-set-add.c  nft-set-del.c  nft-set-elem-add.c  nft-set-elem-del.c  nft-set-elem-get.c  nft-set-get.c  nft-set-json-add.c  nft-set-parse-add.c  (+9 more)
include/: Makefile.am  buffer.h  common.h  data_reg.h  expr.h  expr_ops.h  internal.h  json.h  obj.h  rule.h  set.h  set_elem.h  utils.h  xml.h
include/libnftables/: Makefile.am  chain.h  common.h  expr.h  rule.h  ruleset.h  set.h  table.h
include/libnftnl/: Makefile.am  batch.h  chain.h  common.h  expr.h  flowtable.h  gen.h  object.h  rule.h  ruleset.h  set.h  table.h  trace.h  udata.h
include/linux/netfilter/: Makefile.am  nf_tables.h  nfnetlink.h
src/: Makefile.am  batch.c  buffer.c  chain.c  common.c  expr.c  expr_ops.c  expr_ops.h  flowtable.c  gen.c  internal.h  jansson.c  libnftables.map  libnftnl.map  mxml.c  object.c  rule.c  ruleset.c  set.c  set_elem.c  table.c  trace.c  udata.c  utils.c
src/expr/: bitwise.c  byteorder.c  cmp.c  connlimit.c  counter.c  ct.c  data_reg.c  data_reg.h  dup.c  dynset.c  exthdr.c  fib.c  flow_offload.c  fwd.c  hash.c  immediate.c  inner.c  last.c  limit.c  log.c  lookup.c  masq.c  match.c  meta.c  nat.c  numgen.c  objref.c  osf.c  payload.c  queue.c  quota.c  range.c  redir.c  reject.c  rt.c  socket.c  synproxy.c  target.c  tproxy.c  tunnel.c  (+1 more)
test/: nft-chain-xml-add.sh  nft-rule-xml-add.sh  nft-table-xml-add.sh
tests/: Makefile.am  nft-chain-test.c  nft-expr_bitwise-test.c  nft-expr_byteorder-test.c  nft-expr_cmp-test.c  nft-expr_counter-test.c  nft-expr_ct-test.c  nft-expr_dup-test.c  nft-expr_exthdr-test.c  nft-expr_fwd-test.c  nft-expr_hash-test.c  nft-expr_immediate-test.c  nft-expr_limit-test.c  nft-expr_log-test.c  nft-expr_lookup-test.c  nft-expr_masq-test.c  nft-expr_match-test.c  nft-expr_meta-test.c  nft-expr_nat-test.c  nft-expr_numgen-test.c  nft-expr_objref-test.c  nft-expr_payload-test.c  nft-expr_queue-test.c  nft-expr_quota-test.c  nft-expr_range-test.c  nft-expr_redir-test.c  nft-expr_reject-test.c  nft-expr_target-test.c  nft-flowtable-test.c  nft-parsing-test.c  nft-rule-test.c  nft-set-test.c  nft-table-test.c  test-script.sh
tests/jsonfiles/: 01-table.json  02-table.json  11-chain.json  12-chain.json  13-chain.json  14-chain.json  20-rule-bitwise.json  21-rule-byteorder.json  22-rule-cmp.json  23-rule-counter.json  24-rule-ct.json  25-rule-exthdr.json  26-rule-immediate.json  27-rule-limit.json  28-rule-log.json  29-rule-match.json  30-rule-lookup.json  31-rule-meta.json  32-rule-nat4.json  33-rule-nat6.json  34-rule-payload.json  35-rule-target.json  36-rule-real.json  37-rule-real.json  38-rule-real.json  39-rule-real.json  40-rule-real.json  41-rule-real.json  42-rule-real.json  43-rule-real.json  44-rule-real.json  45-rule-real.json  46-rule-real.json  47-rule-real.json  48-rule-real.json  49-rule-real.json  50-rule-real.json  51-rule-real.json  52-rule-real.json  53-rule-real.json  (+17 more)
tests/xmlfiles/: 01-table.xml  02-table.xml  10-chain.xml  11-chain.xml  12-chain.xml  20-rule-bitwise.xml  21-rule-byteorder.xml  22-rule-cmp.xml  23-rule-counter.xml  24-rule-ct.xml  25-rule-exthdr.xml  26-rule-immediate.xml  26-rule-limit.xml  27-rule-limit.xml  28-rule-log.xml  29-rule-lookup.xml  30-rule-match.xml  31-rule-meta.xml  32-rule-nat6.xml  33-rule-nat4.xml  34-rule-payload.xml  35-rule-target.xml  36-rule-real.xml  37-rule-real.xml  38-rule-real.xml  39-rule-real.xml  40-rule-real.xml  41-rule-real.xml  42-rule-real.xml  43-rule-real.xml  44-rule-real.xml  45-rule-real.xml  46-rule-real.xml  47-rule-real.xml  48-rule-real.xml  49-rule-real.xml  50-rule-real.xml  51-rule-real.xml  52-rule-real.xml  53-rule-real.xml  (+28 more)
